# maa_maaend_okww_bettergi_onedragon

./: .gitignore  README.md  launch_dashboard.vbs  launch_dashboard_admin.vbs  pyproject.toml  run_dashboard.bat  run_dashboard_admin.bat
dashboard_data/: settings.json  workflows.json
scripts/: install_shortcuts.ps1  launch_dashboard.py  run_bettergi_debug.py
src/dashboard_app/: __init__.py  __main__.py  controller.py  defaults.py  discovery.py  event_log.py  input_utils.py  models.py  ocr_actions.py  paths.py  process_utils.py  runtime.py  storage.py  window_utils.py
src/dashboard_app/adapters/: __init__.py  base.py  bettergi.py  maa.py  maaend.py  okww.py
src/dashboard_app/ui/: dialogs.py  main_window.py  widgets.py
src/multi_run_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
